--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "memory-card-game",
   "version": "0.1.0",
+  "homepage": "http://anemoiaa.github.io/memory-card-game",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
